--- a/ecom/templates/admin/admhome.html
+++ b/ecom/templates/admin/admhome.html
@@ -1,14 +1,238 @@
 {% include "admin/adminbase.html" %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/admindash.css' %}">
 
 
-{% block content1 %}  
+{% block content1 %}
+  <!-- Your existing content goes here -->
+<div class="bg-muted pt-3">
+  <!-- New block for additional content -->
+  <h1 class="text-center">Dash Board</h1>
+  <div class="container mt-4 ">
+    <!-- <h2 class="mb-4">Additional Content</h2> -->
 
-<div class="container">  
-    <div class="row">  
-        <div class="col-lg-8 col-lg-offset-2">  
-            <h1>Dashboard </h1>  
-         </div>  
-    </div>  
-</div>   
+    <div class="row">
+      <!-- Card 1 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="d-flex align-items-center justify-content-between">
+              <h3 class="mb-0">₹{{daily}}</h3>
+              <p class=" {% if daily_perc > 0 %}  text-success {% else %} text-danger {% endif %} mb-0 font-weight-medium">{{daily_perc}}%</p>
+            </div>
+            <div class="icon-box icon-box-success">
+              <span class="mdi mdi-arrow-top-right icon-item"></span>
+            </div>
+            <h6 class="mt-3 mb-0 text-muted font-weight-normal">Daily sales</h6>
+          </div>
+        </div>
+      </div>
 
+      <!-- Card 2 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="d-flex align-items-center justify-content-between">
+              <h3 class="mb-0">₹{{weekly_sales}}</h3>
+              <p class=" {% if weekly_perc > 0 %}  text-success {% else %} text-danger {% endif %} mb-0 font-weight-medium">{{weekly_perc}}%</p>
+            </div>
+            <div class="icon-box icon-box-success">
+              <span class="mdi mdi-arrow-top-right icon-item"></span>
+            </div>
+            <h6 class="mt-3 mb-0 text-muted font-weight-normal">Weekly sales</h6>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="d-flex align-items-center justify-content-between">
+              <h3 class="mb-0 pr-2">₹{{monthly_sales}} </h3>
+              <p class="{% if monthly_perc > 0 %} text-success {% else %}  text-danger {% endif %} mb-0 font-weight-medium">{{monthly_perc}}%</p>
+            </div>
+            <div class="icon-box icon-box-danger">
+              <span class="mdi mdi-arrow-bottom-left icon-item"></span>
+            </div>
+            <h6 class="mt-3 mb-0 text-muted font-weight-normal">Monthly sales</h6>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="col-xl-3 col-md-6 mb-4">
+        <div class="card h-100">
+          <div class="card-body">
+            <div class="d-flex align-items-center justify-content-between">
+              <h3 class="mb-0 pr-2">₹{{yearly_sales}} </h3>
+              <p class="{% if yearly_perc > 0 %} text-success {% else %} text-danger {% endif %} mb-0 font-weight-medium">{{yearly_perc}}%</p>
+            </div>
+            <div class="icon-box icon-box-success">
+              <span class="mdi mdi-arrow-top-right icon-item"></span>
+            </div>
+            <h6 class="mt-3 mb-0 text-muted font-weight-normal">Yearly  sales</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class=" bg-white"> 
+       <canvas id="monthlySalesChart" width="300" height="150" style="margin: 80px; background-color: white; "></canvas> </div>
+    </div>
+    <div class="container">
+      <div class="row">
+      <div class="col-md-6 bg-white pb-1 ">
+        <canvas id="orderStatusChart" width="300" height="150"  style="margin: 80px; "></canvas>
+
+      </div>
+      <div class="col-md-6 bg-white pb-1 border-left border-dark">
+        <canvas id="dailySalesChart" width="300" height="200"   style="margin: 80px 0 80px 0; "></canvas>
+
+      </div>
+      </div>
+    </div>
+  
+
+    <div class="container mt-5">
+      <div class="card p-4">
+        <h4 class="mb-4">Sales Report</h4>
+  
+        <form method="post" action="/admhome/">
+          {% if messages %}
+              {% for message in messages %}
+                <h5 class=" text-danger text-center"> {{ message }} </h5>
+              {% endfor %}
+          {% endif %}
+          {% csrf_token %}
+          <div class="form-group">
+            <label for="date1">Start Date:</label>
+            <input type="date" class="form-control" id="date1" name="date1" required>
+          </div>
+  
+          <div class="form-group">
+            <label for="date2">End Date:</label>
+            <input type="date" class="form-control" id="date2" name="date2" required>
+          </div>
+  
+          <button type="submit" class="btn btn-primary">Generate Report</button>
+        </form>
+      </div>
+    </div>
+
+</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <script> 
+    const data = {{ data|safe }};
+    const labels = {{ labels|safe }};
+    const ctx = document.getElementById('monthlySalesChart').getContext('2d');
+
+    const monthlySalesChart = new Chart(ctx, {
+      type: 'bar',
+      data:  {
+        labels: labels,
+        datasets: [{
+          label: '2024',
+          data: data,
+          backgroundColor: 'rgba(75, 192, 192, 0.5)', // Bar color
+          borderColor: 'rgba(75, 192, 192, 1)', // Border color
+          borderWidth: 2, // Border width
+        }]
+      },
+      options: {
+        responsive: true,
+        scales: {
+          x: {
+            beginAtZero: true,
+          },
+          y: {
+            beginAtZero: true,
+          },
+        },
+        plugins: {
+          title: {
+            display: true,
+            text: 'Monthly Sales Overview', // Add your desired heading here
+            font: {
+              size: 16,
+              weight: 'bold'
+            }
+          }
+        }
+      },
+    });
+    </script>
+    <script>
+    const orderStatusLabels = {{pielabel|safe}};
+    const orderStatusCount = {{piedata|safe}};
+
+    const ctxx = document.getElementById('orderStatusChart').getContext('2d');
+    const orderStatusChart = new Chart(ctxx, {
+        type: 'doughnut',
+        data: {
+            labels: orderStatusLabels,
+            datasets: [{
+                data: orderStatusCount,
+                backgroundColor: ['#F0FF33', '#FF0000', '#00FFBD','#00FF27','#006CFF'],  // Colors for each status
+            }]
+        },
+        options: {
+            responsive: true,
+            plugins: {
+              title: {
+                display: true,
+                text: 'Order Summary', // Add your desired heading here
+                font: {
+                  size: 30,
+                  weight: 'bold'
+                }
+              }
+            }
+        }
+
+    });
+</script>
+<script>
+  const dailySalesLabels = {{newdata|safe}}
+  const dailySalesAmounts = {{newlabel|safe}}
+
+  const ctxr = document.getElementById('dailySalesChart').getContext('2d');
+  const dailySalesChart = new Chart(ctxr, {
+      type: 'line',
+      data: {
+          labels: dailySalesLabels,
+          datasets: [{
+              label: 'Daily Sales',
+              data: dailySalesAmounts,
+              backgroundColor: 'rgba(75, 192, 192, 0.5)',
+              borderColor: 'rgba(75, 192, 192, 1)',
+              borderWidth: 2,
+          }]
+      },
+      options: {
+          responsive: true,
+          scales: {
+              x: {
+                  beginAtZero: true,
+              },
+              y: {
+                  beginAtZero: true,
+              },
+          },
+          plugins: {
+            title: {
+              display: true,
+              text: 'Last 10 days sales', // Add your desired heading here
+              font: {
+                size: 30,
+                weight: 'bold'
+              }
+            }
+          }
+      },
+  });
+</script>
 {% endblock content1 %}
