filters , search,sort ✅

--- a/ecom/templates/footer.html
+++ b/ecom/templates/footer.html
@@ -37,9 +37,9 @@
             <div class="d-flex">
                 <ul class="list-unstyled mr-l-5 pr-l-3 mr-4">
                   <li><a href="/contact_us/" class="py-2 d-block">Contact</a></li>
-                  <li><a href="#" class="py-2 d-block">Returns &amp; Exchange</a></li>
-                  <li><a href="#" class="py-2 d-block">Terms &amp; Conditions</a></li>
-                  <li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
+                  <li><a href="/terms/" class="py-2 d-block">Returns &amp; Exchange</a></li>
+                  <li><a href="/terms/" class="py-2 d-block">Terms &amp; Conditions</a></li>
+                  <li><a href="/terms/" class="py-2 d-block">Privacy Policy</a></li>
                 </ul>
               </div>
           </div>
