--- a/ecom/templates/page_not_found.html
+++ b/ecom/templates/page_not_found.html
@@ -107,7 +107,7 @@ margin: 50px;
 
   
 </style>
-		<!-- breadcrumb-section -->
+		<!-- 404-not found -->
 		<div class="breadcrumb-section breadcrumb-bg">
 			<div class="container">
 				<div class="row">
@@ -120,7 +120,7 @@ margin: 50px;
 				</div>
 			</div>
 		</div>
-		<!-- end breadcrumb section -->
+		<!-- end 404 section -->
 		<!-- error section -->
 		<div class="full-height-section error-section bg-light">
 			<div class="full-height-tablecell">
