--- a/ecom/static/css/height.css
+++ b/ecom/static/css/height.css
@@ -1,5 +1,5 @@
 
-
+/* height of the image and div */
       @media (min-width: 768px){
         #divhgt{
             height: 500px !important  ;
@@ -22,3 +22,48 @@
       }
       
    
+/* sortby (high or low) */
+.labels {
+  font-weight: 600; 
+  margin-bottom: 5px; 
+}
+
+.selects {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 5px 10px;
+  font-family: sans-serif;
+  font-size: 14px;
+  color: #333;
+  background-color: #fff;
+}
+
+.selects:hover {
+  background-color: rgb(243, 249, 216);
+}
+
+.selects:focus {
+  outline: 2px solid #dbcc8f; 
+}
+
+
+/*  prize range slider */
+/* .mainslider {
+  font-family: 'Arial', sans-serif;
+  background-color: #f4f4f4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.slider-container {
+  width: 300px;
+  text-align: center;
+}
+
+.span1 {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+} */
