--- a/ecom/templates/login/reset_pass.html
+++ b/ecom/templates/login/reset_pass.html
@@ -10,38 +10,31 @@
                     <div class="login_part_form_iner">
                         <h3>Welcome Admin <br>
                             Login </h3>
-                        <form class="row contact_form" action="/reset_pass/{{id}}" method="POST" >
-                        {% csrf_token %}
-                        {% for message in messages %}
-                            <h5 class="text-center text-danger">{{message}} </h5>
-                        
-                        {% endfor %}
+                        <form class="row contact_form" action="/reset_pass/{{id}}" method="POST">
+                            {% csrf_token %}
+                            {% for message in messages %}
+                            <div class="text-center">
+                                <h5 class="text-center text-danger">{{message}} </h5>
+                            </div>
+                            {% endfor %}
                             <div class="col-md-12 form-group p_star">
-                                <input type="text" class="form-control" id="email" name="password" 
+                                <input type="password" class="form-control" id="email" name="password"
                                     placeholder="password" required>
                             </div>
                             <div class="col-md-12 form-group p_star">
-                                <input type="password" class="form-control" id="password" name="password1" 
+                                <input type="password" class="form-control" id="password" name="password1"
                                     placeholder="confirm password" required>
                             </div>
                             <div class="col-md-12 form-group">
-                                {% comment %} <div class="creat_account d-flex align-items-center">
-                                    <input type="checkbox" id="f-option" name="selector">
-                                    <label for="f-option">Remember me</label>
-                                </div> {% endcomment %}
                                 <button type="submit" value="submit" class="btn_3 border-dark lgn">
                                     Reset
                                 </button>
-                                </form>
+                            </div>
+                        </form>
                     </div>
-                        
                 </div>
             </div>
         </div>
     </div>
-
- 
-    
-
-
+</section>
 {% endblock maincontent %}
