--- a/ecom/templates/login/verifyreg.html
+++ b/ecom/templates/login/verifyreg.html
@@ -8,20 +8,19 @@
     <div class="card py-5 px-3">
       <h5 class="m-0 text-center h4"><b>OTP Verification</b></h5> 
       <span class="mobile-text text-center h5">
-        6 digit Verification code send into your email<br>
+        <b>6 </b> digit Verification code send into your email<br>
         <b class="bbb">Check mail !!</b>
       </span>
+<!-- shwowing error message -->
         {% if messages %}
        {% for message in messages %}
-              <h3 class="text-center text-danger"> {{ message }} </h3>
+              <h4 class="text-center text-danger"> {{ message }} </h4>
             {% endfor %}
         {% endif %}
-      <div class="d-flex flex-row mt-5 p-5 mx-5 text-center" >
-        <input type="number" name="otp" class="form-control" autofocus="" />
-    
+      <div class="d-flex flex-row mt-5 p-5 mx-5 text-center">
+        <input type="number" name="otp" class="form-control" autofocus="" max="999999" min="99999"  required/>
       </div>
       <div class=" text-center">
-        {% comment %} <a class="btn-custom btn-light px-5 py-3 validate ">Cancel</a>  {% endcomment %}
         <button class="px-5 py-3  validate1" type="submit">Verify</button>
       </div>
        <div class="text-center mt-5 bbb ">
@@ -31,42 +30,6 @@
     </div>
 </div>
 </form>
-<!-- modal  -->
-<!-- <div class="modal fade" id="otpModal" tabindex="-1" role="dialog" aria-labelledby="otpModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-
-        <div class="d-flex justify-content-center align-items-center container kk">
-          <form method="post" action="/login/">       
-              {% csrf_token %}
-              
-                  <div class="card py-5 px-3">
-                    <span class="mobile-text text-center h5">
-                      Enter new password <br>
-                      <b class="bbb"></b>
-                    </span>
-                    
-                    <div class="d-flex flex-row mt-5">
-                      <input type="text" maxlength="1" class="form-control" autofocus="" placeholder="password"/><br>
-                      <input type="text" maxlength="1" class="form-control" placeholder="confirm password"/>
-                    </div>
-                    <div class="m-4 text-center">
-                      {% comment %} <a class="btn-custom btn-light px-5 py-3 validate ">Cancel</a>  {% endcomment %}
-                      <button class="px-5 py-3  validate1" type="button">RESET</button>
-                    </div>
-                    <div class="text-center mt-5 bbb">
-                      <span class="d-block mobile-text" id="countdown"></span>
-                      <span class="d-block mobile-text" id="resend"></span>
-                    </div>
-                  </div>
-              </div>
-            </form>
-        </div>
-      </div>
-    </div>
-  </div> 
-</div> -->
 
 <script>let timerOn = true;
   function timer(remaining) {
@@ -93,5 +56,6 @@
   }
   timer(60);
   </script>
+
 {% include 'footer.html' %}
 {% endblock maincontent %}
