--- a/ecom/templates/profile/edit_profile.html
+++ b/ecom/templates/profile/edit_profile.html
@@ -4,8 +4,9 @@
 
   <div class="container mt-4">
     <h2 class="text-center">Edit Profile</h2>
-    <form method="POST" action="/edit_profile/{{username.id}}/">
+    <form method="POST" action="/edit_profile/{{username.id}}/"  id="myForm">
         {% csrf_token %}
+        <!-- display error message -->
         {% if messages %}
         {% for message in messages %}
             <h5 class=" text-danger text-center"> {{ message }} </h5>
@@ -25,31 +26,16 @@
         <label class="form-label" for="inputUsername">Email</label>
         <input class="form-control" id="inputUsername" type="text" placeholder="Enter your email" value="{{username.email}}" disabled>
       </div>
-      <!-- Form Group (organization name and location) -->
-      <!-- <div class="row gx-3 mb-3">
-        <div class="col-md-6">
-          <label class="form-label" for="inputOrgName">Organization name</label>
-          <input class="form-control" id="inputOrgName" type="text" placeholder="Enter your organization name" value="Start Bootstrap">
-        </div>
-        <div class="col-md-6">
-          <label class="form-label" for="inputLocation">Location</label>
-          <input class="form-control" id="inputLocation" type="text" placeholder="Enter your location" value="San Francisco, CA">
-        </div>
-      </div> -->
-
-      <!-- Form Group (email address) -->
       <div class="mb-3">
-        <label class="form-label" for="inputPhone">Phone number</label>
-        <input class="form-control" id="inputPhone" type="tel" placeholder="Enter your phone number" value="{{username.number}}" name="number">
+        <label class="form-label" for="inputPhone">Phone number (+91)</label>
+        <input class="form-control" id="inputPhone" type="number" placeholder="Enter your phone number" {% if username.number %} value="{{username.number}}" {% endif %} name="number">
       </div>
-
-      <!-- Form Group (phone number and birthday) -->
       <div class="row gx-3 mb-3">
         <div class="col-md-6">
           <label class="form-label" for="inputPhone">Gender</label>
           <select class="form-control" id="category" name="gender" >
             <option value="men">Men</option>
-            <option value="women" >Women</option>
+            <option value="women">Women</option>
             <option value="others">Others</option>
         </select>
         </div>
@@ -58,10 +44,22 @@
           <input class="form-control" id="inputBirthday" type="date" name="dob" placeholder="Enter your birthday" value="{{username.dob|date:'Y-m-d'}}">
         </div>
       </div>
-
-      <!-- Save changes button -->
-      <div class="text-center"><button class="btn btn-primary py-2 px-3" type="submit">Save Changes</button></div>
-      
+      <div class="text-center">
+        <button class="btn btn-primary py-2 px-3" style="border-radius: 0px;" type="submit">Save Changes</button>
+      </div>
     </form>
   </div>
+<!-- validation for number -->
+  <script>
+      const form = document.getElementById("myForm");
+      form.addEventListener("submit", function(event) {
+        const numberInput = document.getElementById("inputPhone");
+        const number = numberInput.value;
+
+        if (number != "" && number.length !== 10) { 
+          event.preventDefault();
+          alert("Enter valid number !!");
+        }
+      });
+  </script>
 {% endblock %}
