--- a/ecom/templates/shop/singleproduct.html
+++ b/ecom/templates/shop/singleproduct.html
@@ -72,7 +72,6 @@
                             Catergory : {{prod.product_id.category}} <br>
                             Color : {{prod.color}} <br>
 
-                            <!-- Color : Green  <br> -->
                         </p>
 
 						<form action="{% url 'addto_cart' prod.id  %}" method="get">
@@ -127,11 +126,7 @@
 				<button type="submit" class="btn btn-black px-5 py-3" style="border-radius: 0cm;">
 					<span>Add to Cart</span>
 				</button>&nbsp;
-
 				{% comment %} <a href="" class="btn btn-primary py-3 px-5" style="color: black; border-radius: 0cm;"  data-toggle="modal" data-target="#sizeModal">Buy Now</a> {% endcomment %}
-
-						
-
 				&nbsp; &nbsp;
 				{% if not is_in_wish %}
 				<a href="{% url 'add_to_wish' prod.product_id.id %}?next={{request.path}} " title="add to wishlist"> <i class="fa-regular fa-heart fa-beat fa-2xl" style="color: #ff3246;"></i></a>
@@ -205,7 +200,12 @@
               <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="day-1-tab">
               	<div class="p-4">
 	              	<h3 class="mb-4">{{prod.product_id.brand.brand_name}} {{prod.product_id.name}}</h3>
-	              	<p>{{prod.product_id.description}} <br> {{prod.product_id.name}}is a fusion of sporty style and street-ready flair. With a sleek and modern design, these high-top sneakers offer a fashion-forward look that effortlessly transitions from the court to the urban landscape. Crafted with Puma's renowned attention to comfort and performance, these high tops feature a supportive ankle design, cushioned insoles, and the iconic Puma logo. Whether you're hitting the streets or making a statement on the court, the Puma Vegas High Top combines athletic functionality with trendsetting aesthetics</p>
+	              	<p>{{prod.product_id.description}} <br> {{prod.product_id.name}}is a fusion of sporty style and street-ready flair. 
+						With a sleek and modern design, these high-top sneakers offer a fashion-forward look that effortlessly transitions from the court to the urban landscape. 
+						Crafted with {{prod.product_id.brand.brand_name}}'s renowned attention to comfort and performance,
+						 these high tops feature a supportive ankle design, cushioned insoles, and the iconic {{prod.product_id.brand.brand_name}} logo.
+						 Whether you're hitting the streets or making a statement on the court, the {{prod.product_id.brand.brand_name}} {{prod.product_id.name}}
+						  combines athletic functionality with trendsetting aesthetics</p>
               	</div>
               </div>
 
@@ -213,7 +213,13 @@
               	<div class="p-4">
 	              	<h3 class="mb-4">Manufactured By {{prod.product_id.brand.brand_name}}</h3>
 	              	<p>
-                        {{prod.product_id.brand.brand_name}}, a prominent shoe manufacturer, is recognized for its commitment to quality craftsmanship and innovative shoe designs. Leveraging cutting-edge technology, Puma's shoe manufacturing process integrates performance-driven features with contemporary aesthetics. The brand's expertise spans various athletic disciplines, with a focus on creating footwear that not only meets the demands of sports enthusiasts but also reflects current fashion trends. Puma's dedication to sustainability is evident in its responsible sourcing of materials and eco-friendly manufacturing practices. Through a combination of heritage and forward-thinking, Puma continues to shape the landscape of shoe manufacturing, producing a diverse range of athletic and lifestyle footwear that resonates with a global audience.</p>
+                        {{prod.product_id.brand.brand_name}}, a prominent shoe manufacturer, is recognized for its commitment to quality craftsmanship and innovative shoe designs.
+						 Leveraging cutting-edge technology, Puma's shoe manufacturing process integrates performance-driven features with contemporary aesthetics.
+						  The brand's expertise spans various athletic disciplines, with a focus on creating footwear that not only meets the demands of sports 
+						  enthusiasts but also reflects current fashion trends.
+						  {{prod.product_id.brand.brand_name}}'s dedication to sustainability is evident in its responsible sourcing of materials and eco-friendly manufacturing practices.
+						   Through a combination of heritage and forward-thinking, Puma continues to shape the landscape of shoe manufacturing,
+						    producing a diverse range of athletic and lifestyle footwear that resonates with a global audience.</p>
               	</div>
               </div>
               <div class="tab-pane fade" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-day-3-tab">
@@ -351,33 +357,23 @@
     </section>
 {% include 'footer.html' %}
 
-   
-    
-  
-
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script>
-    // Call the updateQuantity function when the page loads
     document.addEventListener("DOMContentLoaded", function() {
         updateQuantity();
     });
 
     function updateQuantity() {
-        // Get the selected size from the dropdown
         var selectedSize = document.getElementById("size").value;
-
-        // Loop through product variants to find the corresponding quantity
         var quantityMessage = "Out of stock";
         {% for vari in productvariants %}
             if ({{ vari.size }} == selectedSize && {{ vari.stock }} > 0) {
                 quantityMessage = "Only " + {{ vari.stock }} + " left";
             }
         {% endfor %}
-
-        // Update the quantity message in the HTML
         document.getElementById("quantityMessage").innerText = quantityMessage;
     }
 </script>
@@ -387,54 +383,32 @@
 
 		var quantity=0;
 		   $('.quantity-right-plus').click(function(e){
-		        
-		        // Stop acting like a button
 		        e.preventDefault();
-		        // Get the field name
 		        var quantity = parseInt($('#quantity').val());
-		        
-		        // If is not undefined
 		            if(quantity < 5){
 		            $('#quantity').val(quantity + 1);
 					}
-		          
-		            // Increment
-		        
 		    });
 
 		     $('.quantity-left-minus').click(function(e){
-		        // Stop acting like a button
 		        e.preventDefault();
-		        // Get the field name
 		        var quantity = parseInt($('#quantity').val());
-		        
-		        // If is not undefined
-		      
-		            // Increment
 		            if(quantity>1){
 		            $('#quantity').val(quantity - 1);
 		            }
-		    });
-		    
+		    }); 
 		});
+
+// change the main image to the clicked
 var mainImage = document.getElementById('zoom-image');
 var thumbnailContainer = document.querySelector('.thumbnail-container');
 
 function changeImage(thumbnail) {
     mainImage.src = thumbnail.src;
-   // resetZoom();
 }
-
-// function resetZoom() {
-   // mainImage.style.transform = 'scale(1)';
-   // mainImage.style.transformOrigin = '0% 0%';
-//}
-
 thumbnailContainer.addEventListener('mouseover', function () {
     resetZoom();
 });
-
-
 	</script>
 	<script>
 		$(document).ready(function() {
